tests/toylang/neg/000961_mutation.toylang
program a = { if a then bool; } .
